All checked with connection pooling testing
