# index.js
@@ -1,25 +1,31 @@
 const express = require('express')
+const cors = require('cors')
 const sls = require('serverless-http')
 const bodyParser = require('body-parser');
-const cors = require('cors')
-
-//Importing controller
-const db = require('./Controller/dbController');
+const config = require('config');
 
 //Importing model
 const { UserModel } = require('./Model/UserModel');
 
+//Importing controller
+const { connectToMongo, connectToAWSMySqlRDS, mysqlRaw } = require('./Controller/dbController');
+const { getUsers, createUser } = require('./Controller/customController');
+
+
 //For Swagger Api Documentation for local development
-var swaggerUi = require('swagger-ui-express');
-var swaggerDocument = require('./swagger.json');
+const swaggerUi = require('swagger-ui-express');
+const swaggerDocument = require('./swagger.json');
 
 //Initializing app
 const app = express()
 app.use(express.json());
 app.use(bodyParser.json());
 app.use(bodyParser.urlencoded({ extended: true }));
-db.connect();
 app.use(cors())
+
+//Db connection initialization
+connectToMongo();
+global.connectToMySql = connectToAWSMySqlRDS();
 
 //Starting point
 app.get('/', function (req, res) {
@@ -36,8 +42,7 @@ app.get('/heartbeat', async (req, res, next) => {
   });
 })
 
-
-//userFunction Endpoint Start
+//userFunctionMongo Endpoint Start
 app.post('/user/create', async (req, res, next) => {
   const bodyData = {
     "name": req.body.name,
@@ -106,13 +111,59 @@ app.put('/user/update', async (req, res, next) => {
 
 })
 
-//userFunction Endpoint End
-//module.exports.server = sls(app)
+//userFunctionMysql
+app.get('/mysql/user/get', (req, res) => {
+  getUsers().then(users => {
+    console.log(users);
+    res.send(users)
+  }).catch(err => console.error(err));
+});
+
+app.post('/mysql/user/create', (req, res) => {
+  createUser(req).then(users => res.send(users)).catch(err => console.error(err));
+});
+
+
+
+// For testing connection pooling problem with raw connection string
+const db_connection = mysqlRaw();
+db_connection.connect((err) => {
+  if (err) console.error(err);
+  console.log('MySQL Raw Connection Established.');
+});
+
+const getUsersAttack = () => new Promise((resolve, reject) => {
+  db_connection.query('SELECT * FROM users', (err, results) => {
+    if (err) reject(err);
+    console.log('User Query Results: ', results);
+    resolve(results);
+    db_connection.end(err => { if (err) reject(err) });
+  });
+});
+
+app.get('/attack', (req, res) => {
+  getUsersAttack()
+    .then(users => res.send(users))
+    .catch(err => console.error(err));
+});
+
 
 /*
-** To run on local machine **/
-const server = app.listen(4000, function () {
-  console.log(`App is running on 4000 Port`)
-})
-module.exports = server;
+ ** To deploy in aws lambda **/
+module.exports.server = sls(app)
+/** To deploy in aws lambda **/
+
+
+/*
+** To run on local machine
+
+  const server = app.listen(config.get('port'), function () {
+    console.log("App is running on Port :",config.get('port'))
+  })
+  module.exports = server;
+
+  ** To run on local machine **
+*/
+
+
 
